maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:12: error: value north is not a member of object plm.universe.Direction
  setDirection(Direction.north)
                         ^